# mars-self-healing

./: CONTRIBUTING.md  README.md  pyproject.toml
experiments/results/: summary_results.csv
mars-self-healing/: CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md
mars-self-healing/configs/scenarios/: cascading_failures.yaml
mars-self-healing/src/: __init__.py
mars-self-healing/src/agents/: executor.py  strategist.py
mars-self-healing/src/orchestrator/: __init__.py  confidence_gate.py
paper/: main.tex
src/agents/: __init__.py  diagnostician.py  observer.py
