[project]
name = "mars-self-healing"
version = "0.1.0"
description = "Multi-Agent Reasoning for Self-Healing in Cloud-Native Microservice Systems"
authors = [{name = "Veeraiah Chowdary Thubati", email = "veerathubati@gmail.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["multi-agent", "self-healing", "microservices", "LLM", "RAG", "AIOps", "kubernetes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "openai>=1.12.0",
    "langchain>=0.1.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.0",
    "kubernetes>=28.1.0",
    "prometheus-client>=0.19.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "tiktoken>=0.5.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
